--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,11 +17,16 @@
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: rgb(26, 26, 26);
+}
+
+table, th{
+  border: 2px solid white;
+  color: white;
+  text-align: center;
+}
+
+td {
+  width: 10vw;
+  height: 3vh;
 }
